# Reward-as-An-Agent-for-Embodied-World-Models

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  reward_main.py
.github/workflows/: ci.yml
examples/demo_01/: prompt.txt  request.json
examples/demo_02/: prompt.txt  request.json
examples/demo_03/: prompt.txt  request.json
examples/demo_04/: prompt.txt  request.json
examples/demo_05/: prompt.txt  request.json
reward_as_agent/: __init__.py  app.py  cli.py  config.py  llm.py  logging.py  metrics.py  pipeline.py  prompts.py  scoring.py  video.py
scripts/: eval_server.py  run_reward_as_agent.sh  setup_env.sh  start_background.sh
tests/: test_cli.py  test_config.py  test_llm.py  test_logging.py  test_metrics.py  test_reward_main.py  test_video.py
