[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reward-as-agent"
version = "0.1.0"
description = "Reward as An Agent for Embodied World Models reward service."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "Reward as An Agent Authors"}
]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "requests>=2.31",
  "pydantic>=2",
  "numpy>=1.24,<2",
  "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8",
]

[project.scripts]
reward-as-agent = "reward_as_agent.cli:main"

[tool.setuptools.packages.find]
include = ["reward_as_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"
